--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -5,18 +5,18 @@ Edit a user
 {% endblock %}
 
 {% block content %}
-<h1>Edit a user</h1>
+<h1>Edit {{ user.first_name }} {{ user.last_name }}</h1>
 
-<form action="" method="POST">
+<form action="/users/{{ user.id }}/edit" method="POST">
   <label for="first_name">First Name</label>
-  <input type="text" name="first_name" id="first_name" value="">
+  <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}">
   <label for="last_name">Last Name</label>
-  <input type="text" name="last_name" id="last_name" value="">
+  <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}">
   <label for="image_url">Image Url</label>
-  <input type="text" name="image_url" id="image_url" value="">
+  <input type="text" name="image_url" id="image_url" value="{{ user.image_url }}">
   <button>Save</button>
 </form>
-<form action="">
+<form action="/users/{{ user.id }}">
   <button>Cancel</button>
 </form>
 {% endblock %}
