--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -6,12 +6,12 @@ User Detail
 
 {% block content %}
 <div>
-  <h1>User name</h1>
-  <img src="" alt="">
-  <form action="">
+  <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+  <img src="{{ user.image_url }}" alt="">
+  <form action="/users/{{ user.id }}/edit">
     <button>Edit</button>
   </form>
-  <form action="" method="POST">
+  <form action="/users/{{ user.id }}/delete" method="POST">
     <button>Delete</button>
   </form>
 </div>
