--- a/templates/users.html
+++ b/templates/users.html
@@ -7,9 +7,15 @@ Users
 {% block content %}
 <h1>Users</h1>
 <ul>
-
+ {% for user in users %}
+   <li>
+    <a href="/users/{{ user.id }}">
+      {{ user.first_name }} {{ user.last_name }}
+    </a>
+  </li>
+ {% endfor %}
 </ul>
-<form action="">
+<form action="/users/new">
   <button>Add user</button>
 </form>
 
