--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -5,6 +5,8 @@ User Detail
 {% endblock %}
 
 {% block content %}
+<!-- User Detail Template - used in testing -->
+<!-- TODO:  formaction and formmethod in button, insert alt, conditional logic for photo-->
 <div>
   <h1>{{ user.first_name }} {{ user.last_name }}</h1>
   <img src="{{ user.image_url }}" alt="">
