First code review feedback incorporated.

--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -7,18 +7,14 @@ Create a user
 {% block content %}
 <!-- Create User Form Template - used for testing -->
 <h1>Create a user</h1>
-<!-- TODO: Input format, remove action, type=text, button type submit-->
+
 <form action="" method="POST">
   <label for="first_name">First Name</label>
-  <input
-    type="text"
-    name="first_name"
-    id="first_name"
-    placeholder="Enter a first name">
+  <input name="first_name" id="first_name" placeholder="Enter a first name">
   <label for="last_name">Last Name</label>
-  <input type="text" name="last_name" id="last_name" placeholder="Enter a last name">
+  <input name="last_name" id="last_name" placeholder="Enter a last name">
   <label for="image_url">Image Url</label>
-  <input type="text" name="image_url" id="image_url" placeholder="Provide an image of this user">
-  <button>Add</button>
+  <input name="image_url" id="image_url" placeholder="Provide an image of this user">
+  <button type="submit">Add</button>
 </form>
 {% endblock %}
