--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -8,17 +8,19 @@ Edit a user
 <!-- Edit User Form Template - used in testing -->
 <h1>Edit {{ user.first_name }} {{ user.last_name }}</h1>
 <!-- Link button instead of form -->
-<!-- TODO: Input format, remove action, type=text, button type submit-->
-<form action="/users/{{ user.id }}/edit" method="POST">
+
+
+
+<form action="" method="POST">
   <label for="first_name">First Name</label>
-  <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}">
+  <input name="first_name" id="first_name" value="{{ user.first_name }}">
   <label for="last_name">Last Name</label>
-  <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}">
+  <input name="last_name" id="last_name" value="{{ user.last_name }}">
   <label for="image_url">Image Url</label>
-  <input type="text" name="image_url" id="image_url" value="{{ user.image_url }}">
-  <button>Save</button>
+  <input name="image_url" id="image_url" value="{{ user.image_url }}">
+  <button type="submit">Save</button>
 </form>
-<form action="/users/{{ user.id }}">
-  <button>Cancel</button>
-</form>
+
+<button formaction="/users/{{ user.id }}">Cancel</button>
+
 {% endblock %}
