--- a/templates/users.html
+++ b/templates/users.html
@@ -6,6 +6,11 @@ Users
 
 {% block content %}
 <h1>Users</h1>
+
+{% for message in get_flashed_messages() %}
+  <p>{{ message }}</p>
+{% endfor %}
+
 <ul>
  {% for user in users %}
    <li>
