--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -6,7 +6,7 @@ Create a new post
 
 {% block content %}
 <!-- Create Post Form Template - used for testing -->
-<h1>Create a user</h1>
+<h1>Create a post</h1>
 
 <form action="" method="POST">
   <label for="title">Title</label>
@@ -14,6 +14,6 @@ Create a new post
   <label for="content">Content</label>
   <textarea name="content" id="content" >
   <button formaction="" formmethod="POST">Add</button>
-  <button formaction="">Cancel</button>
+  <button formaction="/users/{{ user_id }}">Cancel</button>
 </form>
 {% endblock %}
