Creating tests for Posts routes

--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Create a new post
+Edit {{ post.title }}
 {% endblock %}
 
 {% block content %}
-<!-- Create Post Form Template - used for testing -->
-<h1>Create a post</h1>
+<!-- Edit Post Form Template - used for testing -->
+<h1>Edit a post</h1>
 
 <form action="" method="POST">
   <label for="title">Title</label>
