--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -10,10 +10,11 @@ Create a new post
 
 <form action="" method="POST">
   <label for="title">Title</label>
-  <input name="title" id="title" >
+  <input name="title" id="title">
   <label for="content">Content</label>
-  <textarea name="content" id="content" >
+  <textarea name="content" id="content" ></textarea>
   <button formaction="" formmethod="POST">Add</button>
   <button formaction="/users/{{ user_id }}">Cancel</button>
 </form>
 {% endblock %}
+
