--- a/templates/users.html
+++ b/templates/users.html
@@ -20,9 +20,8 @@ Users
   </li>
  {% endfor %}
 </ul>
-<form action="/users/new">
-  <button>Add user</button>
-</form>
+
+<a href="/users/new">Add user</a>
 
 {% endblock %}
 
