--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -8,14 +8,36 @@ Edit {{ post.title }}
 <!-- Edit Post Form Template - used for testing -->
 <h1>Edit a post</h1>
 
-<form action="" method="POST">
+<form action="">
   <label for="title">Title</label>
   <input name="title" id="title" value="{{ post.title }}">
   <label for="content">Content</label>
   <textarea name="content" id="content">
     {{ post.content }}
   </textarea>
+
+  {% for tag in post.tags %}
+    <input
+      type="checkbox"
+      id="{{ tag.id }}"
+      name="tag"
+      value="{{ tag.id }}"
+      checked>
+    <label for="{{ tag.id }}">{{ tag.name }}</label>
+  {% endfor %}
+  {% for tag in unselected_tags %}
+    <input
+      type="checkbox"
+      id="{{ tag.id }}"
+      name="tag"
+      value="{{ tag.id }}">
+    <label for="{{ tag.id }}">{{ tag.name }}</label>
+  {% endfor %}
+
+
+
+
   <button formaction="" formmethod="POST">Submit</button>
-  <button formaction="/post/{{ post.id }}">Cancel</button>
+  <button formaction="/posts/{{ post.id }}">Cancel</button>
 </form>
 {% endblock %}
