--- a/templates/post.html
+++ b/templates/post.html
@@ -10,6 +10,12 @@
   <!-- Post Template - used for testing -->
   <h1>{{ post.title }}</h1>
 
+  <ul>
+    {% for tag in post.tags %}
+      <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
+    {% endfor %}
+  </ul>
+
   <article>
     {{ post.content }}
   </article>
